--- a/reports/LEI-106090/index_SORT_BY_BLOCK_DESC.html
+++ b/reports/LEI-106090/index_SORT_BY_BLOCK_DESC.html
@@ -6,11 +6,11 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> 
   <title>Coverage Report > Summary</title>
   <style type="text/css">
-    @import "./css/coverage.css";
-    @import "./css/idea.min.css";
+    @import "cssoverage.css";
+    @import "cssdea.min.css";
   </style>
-  <script type="text/javascript" src="./js/highlight.min.js"></script>
-  <script type="text/javascript" src="./js/highlightjs-line-numbers.min.js"></script>
+  <script type="text/javascript" src="jsighlight.min.js"></script>
+  <script type="text/javascript" src="jsighlightjs-line-numbers.min.js"></script>
 </head>
 
 <body>
@@ -85,15 +85,15 @@ Current scope:     all classes
   <th class="name  
 ">
 <a href="index.html">Package</a>  </th>
-<th class="coverageStat sortedAsc
+<th class="coverageStat 
 ">
-  <a href="index_SORT_BY_CLASS_DESC.html">Class, %</a>
+  <a href="index_SORT_BY_CLASS.html">Class, %</a>
 </th>
 <th class="coverageStat 
 ">
   <a href="index_SORT_BY_METHOD.html">Method, %</a>
 </th>
-<th class="coverageStat 
+<th class="coverageStat sortedDesc
 ">
   <a href="index_SORT_BY_BLOCK.html">Branch, %</a>
 </th>
@@ -103,35 +103,7 @@ Current scope:     all classes
 </th>
 </tr>
   <tr>
-    <td class="name"><a href="ns-1/index_SORT_BY_CLASS.html">iscteiul.ista</a></td>
-<td class="coverageStat">
-  <span class="percent">
-    0%
-  </span>
-  <span class="absValue">
-    (0/1)
-  </span>
-</td>
-<td class="coverageStat">
-  <span class="percent">
-    0%
-  </span>
-  <span class="absValue">
-    (0/2)
-  </span>
-</td>
-    <td class="coverageStat"/>
-<td class="coverageStat">
-  <span class="percent">
-    0%
-  </span>
-  <span class="absValue">
-    (0/3)
-  </span>
-</td>
-  </tr>
-  <tr>
-    <td class="name"><a href="ns-2/index_SORT_BY_CLASS.html">iscteiul.ista.battleship</a></td>
+    <td class="name"><a href="ns-2/index_SORT_BY_BLOCK_DESC.html">iscteiul.ista.battleship</a></td>
 <td class="coverageStat">
   <span class="percent">
     75%
@@ -165,6 +137,34 @@ Current scope:     all classes
   </span>
 </td>
   </tr>
+  <tr>
+    <td class="name"><a href="ns-1/index_SORT_BY_BLOCK_DESC.html">iscteiul.ista</a></td>
+<td class="coverageStat">
+  <span class="percent">
+    0%
+  </span>
+  <span class="absValue">
+    (0/1)
+  </span>
+</td>
+<td class="coverageStat">
+  <span class="percent">
+    0%
+  </span>
+  <span class="absValue">
+    (0/2)
+  </span>
+</td>
+    <td class="coverageStat"/>
+<td class="coverageStat">
+  <span class="percent">
+    0%
+  </span>
+  <span class="absValue">
+    (0/3)
+  </span>
+</td>
+  </tr>
 </table>
 </div>
 
@@ -191,4 +191,3 @@ Current scope:     all classes
 </div>
 </body>
 </html>
-
